[package]
name = "rnbody_pyo3"
version = "0.1.0"
authors = ["Marshal SHI <marshalshi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { version = "0.10.1" }

[lib]
name = "rnbody_pyo3"
crate-type = ["cdylib"]
